--- a/src/app/expenses/components/expenses/expenses.component.html
+++ b/src/app/expenses/components/expenses/expenses.component.html
@@ -513,7 +513,7 @@
                 </div>
                 <div class="bg-gray-50 rounded-xl p-4">
                     <p class="text-sm text-gray-600 mb-1">دفع من قبل</p>
-                    <p class="text-lg font-semibold text-gray-900">{{ selectedExpense.paidBy }}</p>
+                    <p class="text-lg font-semibold text-gray-900">{{ selectedExpense.paidByUser.firstName }} {{ selectedExpense.paidByUser.lastName }}</p>
                 </div>
                 <div class="bg-gray-50 rounded-xl p-4">
                     <p class="text-sm text-gray-600 mb-1">المرجع</p>
