--- a/src/app/shared/components/sidenav/sidenav.html
+++ b/src/app/shared/components/sidenav/sidenav.html
@@ -110,8 +110,7 @@
                 class="group flex items-center gap-3 px-3 py-3 rounded-xl hover:bg-gradient-to-r hover:from-cyan-50 hover:to-orange-50 transition-all duration-300 transform hover:scale-105 hover:shadow-md cursor-pointer relative overflow-hidden">
                 <div
                     class="relative p-2 bg-cyan-100 rounded-xl group-hover:bg-cyan-300 transition-colors duration-300 group-[.router-link-active]:bg-white flex-shrink-0">
-                    <i
-                        class="fa-solid fa-users-between-lines text-cyan-600 group-[.router-link-active]:text-white text-xl"></i>
+                    <i class="fa-solid fa-book text-cyan-600 group-[.router-link-active]:text-white text-xl"></i>
                 </div>
                 <span *ngIf="sidenavService.isOpen$ | async" class="font-semibold text-base
          text-gray-700 
