--- a/src/app/subjects/components/subject/subjects.component.scss
+++ b/src/app/subjects/components/subject/subjects.component.scss
@@ -866,6 +866,29 @@
                             color: #38a169;
                         }
                     }
+                  
+                    .role-badge-teacher {
+                        padding: 0.25rem 0.75rem;
+                        border-radius: 20px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        display: inline-block;
+
+                        &.admin {
+                            background: #fef5e7;
+                            color: #d69e2e;
+                        }
+
+                        &.assistant {
+                            background: #abcefa;
+                            color: #3182ce;
+                        }
+
+                        &.student {
+                            background: #abcefa;
+                            color: #3182ce;
+                        }
+                    }
 
                     .status-badge {
                         padding: 0.25rem 0.75rem;
